syntax = "proto3";
package twilightproject.nyks.bridge;

//import "gogoproto/gogo.proto";

option go_package = "github.com/twilight-project/nyks/x/bridge/types";

message EventRegisterBtcDepositAddress {
    string message = 1;
    string depositAddress = 2;
}

message EventRegisterReserveAddress {
    string message        = 1;
    string reserveScript = 2;
}

message EventRegisterJudgeAddress {
    string message = 1;
    string judgeAddress = 2;
    string validatorAddress = 3;
}

message EventWithdrawBtcRequest {
    string message = 1;
    string twilightAddress = 2;
    string reserveAddress = 3;
    string withdrawAddress = 4;
    uint64 withdrawAmount = 5;
}

message EventSignRefund {
    string message = 1;
    string reserveAddress = 2;
    string signerAddress = 3;
    string refundSignature = 4;
    string btcOracleAddress = 5;
}

message EventSignSweep {
    string message = 1;
    string reserveAddress = 2;
    string signerAddress = 3;
    string sweepSignature = 4;
    string btcOracleAddress = 5;
}

message EventBroadcastTxSweep {
    string message = 1;
    string signedRefundTx = 2;
    string signedSweepTx = 3;
    string judgeAddress = 4;
}

message EventProposeRefundHash {
    string message = 1;
    string refundHash = 2;
    string judgeAddress = 3;
}

message EventUnsignedTxSweep {
    string message = 1;
    string txId = 2;
    string unsignedSweepTx = 3;
    string judgeAddress = 4;
}

message EventUnsignedTxRefund {
    string message = 1;
    uint64 reserveId = 2;
    string unsignedRefundTx = 3;
    string judgeAddress = 4;
}